[package]
name = "iroh-cbor"
version = "0.1.0"
edition = "2021"

[dependencies]
iroh = { git = "https://github.com/n0-computer/iroh.git", branch = "ramfox/porcelain"}
libipld = { verison = "0.16.0", default-features = false, features = ["dag-cbor", "derive"] }
cid = "0.10.1"
blake3 = "1.3.3"
tokio = { version = "1.28.0", features = ["full"] }
futures = "0.3.28"
bytes = "1.4.0"
anyhow = "1.0.71"
tempfile = "3.5.0"
